[project]
name = "meme-filter"
version = "0.1.0"
description = "Meme vs non-meme detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scikit-learn",
  "opencv-python",
  "pillow",
  "torch; platform_system != 'Darwin' or platform_machine != 'arm64'"
]

[tool.setuptools.packages.find]
where = ["src"]
